<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.advancedFilter.AdvancedFilterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="#5F0672"
        android:minHeight="?attr/actionBarSize"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_arrow_back_white"
                android:onClick="getBack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|end"
                    android:layout_marginEnd="10dp"
                    android:background="?android:selectableItemBackground"
                    android:onClick="reset"
                    android:text="@string/advanced_filter_reset"
                    android:textColor="@android:color/white" />


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/advanced_filter_filtro1"
                android:textSize="15sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:max="1000"
                android:scrollbarStyle="outsideInset" />

            <TextView
                android:id="@+id/progressid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0m"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/advanced_filter_filtro2"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/disponibilidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seekBar"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="5dp"
                android:entries="@array/advanced_filter_Open"
                android:textAlignment="center"></Spinner>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"
            android:text="Filtros"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/advancebutton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/icon_circle_favorito_selector"
                        android:onClick="colorButton"
                        android:tag="@string/type_favorite" />

                    <ImageButton
                        android:id="@+id/advancebutton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/icon_circle_hotel_selector"
                        android:onClick="colorButton"
                        android:tag="@string/type_lodging" />

                    <ImageButton
                        android:id="@+id/advancebutton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="50dp"
                        android:background="@drawable/icon_circle_bar_selector"
                        android:onClick="colorButton"
                        android:tag="@string/type_bar" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/advancebutton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/icon_circle_floreria_selector"
                        android:onClick="colorButton"
                        android:tag="@string/type_florist" />

                    <ImageButton
                        android:id="@+id/advancebutton5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/icon_circle_grifo_selector"
                        android:onClick="colorButton"
                        android:tag="@string/type_gas_station" />

                    <ImageButton
                        android:id="@+id/advancebutton6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="50dp"
                        android:background="@drawable/icon_circle_restaurante_selector"
                        android:onClick="colorButton"
                        android:tag="@string/type_restaurant" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/advancebutton7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/icon_circle_tienda_selector"
                        android:onClick="colorButton"
                        android:tag="@string/type_store" />

                    <ImageButton
                        android:id="@+id/advancebutton8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/icon_circle_museo_selector"
                        android:onClick="colorButton"
                        android:tag="@string/type_museum" />

                    <ImageButton
                        android:id="@+id/advancebutton9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="50dp"
                        android:background="@drawable/icon_circle_ferreteria_selector"
                        android:onClick="colorButton"
                        android:tag="@string/type_hardware_store" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:background="@drawable/icon_rounded_button"
            android:onClick="goToSearch"
            android:text="@string/advanced_filter_applybutton"
            android:textColor="#EEEEEE"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </RelativeLayout>



</LinearLayout>
