<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.software.yapespots.ui.search.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5F0672"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/icon_border_search_input"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:onClick="goBackMap"
                android:background="#EEEEEE"
                app:srcCompat="@drawable/ic_arrow_back_black" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:autoText="false"
                android:ems="10"
                android:hint="@string/type_search_hint"
                android:imeOptions="actionSend"
                android:inputType="textPersonName" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_alignBottom="@+id/imageButton"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:tag="@string/type_restaurant"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/icon_border_restaurant"
                android:onClick="onClick"
                app:srcCompat="@drawable/ic_restaurant_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_alignBottom="@+id/imageButton"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:tag="@string/type_bar"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/icon_border_bar"
                android:onClick="onClick"
                app:srcCompat="@drawable/ic_local_bar_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_alignBottom="@+id/imageButton"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:tag="@string/type_favorite"
                android:layout_weight="1"
                android:background="@drawable/icon_border_favorites"
                android:onClick="onClick"
                app:srcCompat="@drawable/ic_star_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_alignBottom="@+id/imageButton"
            android:layout_alignParentRight="true"

            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onMoreFiltersButtonPressed"
                android:background="@drawable/icon_border_more_filters"
                app:srcCompat="@drawable/ic_more_horiz_black_24dp" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>